--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "test": "mocha"
   },
   "keywords": [
@@ -22,6 +23,12 @@
     "lodash": "^3.10.1",
     "lodash.template": "^3.6.2",
     "mocha": "^2.3.3",
-    "traverse": "^0.6.6"
+    "traverse": "^0.6.6",
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-config-firstandthird": "^2.0.0",
+    "eslint-plugin-import": "^1.5.0",
+    "eslint-plugin-jsx-a11y": "^1.0.2",
+    "eslint-plugin-react": "^5.1.1"
   }
 }
