--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "dependencies": {
     "chai": "^3.3.0",
     "lodash": "^3.10.1",
-    "lodash.template": "^3.6.2",
     "mocha": "^2.3.3",
-    "traverse": "^0.6.6",
+    "traverse": "^0.6.6"
+  },
+  "devDependencies": {
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^8.0.0",
     "eslint-config-firstandthird": "^2.0.0",
