--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "lodash": "^3.10.1",
+    "lodash.clonedeep": "^4.3.2",
+    "lodash.merge": "^4.4.0",
+    "lodash.template": "^4.2.5",
     "traverse": "^0.6.6"
   },
   "devDependencies": {
