--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "lodash.clonedeep": "^4.3.2",
+    "lodash.get": "^4.3.0",
     "lodash.merge": "^4.4.0",
     "lodash.template": "^4.2.5",
     "traverse": "^0.6.6"
