--- a/package.json
+++ b/package.json
@@ -22,17 +22,16 @@
     "lodash.clonedeep": "^4.3.2",
     "lodash.get": "^4.3.0",
     "lodash.merge": "^4.4.0",
+    "lodash.set": "^4.3.2",
     "lodash.template": "^4.2.5",
+    "lodash.unset": "^4.5.2",
     "traverse": "^0.6.6"
   },
   "devDependencies": {
     "chai": "^3.3.0",
-    "mocha": "^2.3.3",
-    "eslint": "^2.9.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-config-firstandthird": "^2.0.0",
-    "eslint-plugin-import": "^1.5.0",
-    "eslint-plugin-jsx-a11y": "^1.0.2",
-    "eslint-plugin-react": "^5.1.1"
+    "eslint": "^3.4.0",
+    "eslint-config-firstandthird": "^3.0.2",
+    "eslint-plugin-import": "^1.14.0",
+    "mocha": "^2.3.3"
   }
 }
