--- a/package.json
+++ b/package.json
@@ -19,12 +19,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "lodash.clonedeep": "^4.3.2",
-    "lodash.get": "^4.3.0",
-    "lodash.merge": "^4.4.0",
-    "lodash.set": "^4.3.2",
-    "lodash.template": "^4.2.5",
-    "lodash.unset": "^4.5.2",
+    "lodash": "^4.16.3",
     "traverse": "^0.6.6"
   },
   "devDependencies": {
