--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "mocha"
+    "test": "tape test/*.js"
   },
   "keywords": [
     "json",
@@ -27,6 +27,7 @@
     "eslint": "^3.9.1",
     "eslint-config-firstandthird": "^3.0.2",
     "eslint-plugin-import": "^2.1.0",
-    "mocha": "^3.1.2"
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.3"
   }
 }
