--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "traverse": "^0.6.6"
   },
   "devDependencies": {
-    "chai": "^3.3.0",
     "eslint": "^3.9.1",
     "eslint-config-firstandthird": "^3.0.2",
     "eslint-plugin-import": "^2.1.0",
+    "tap": "^8.0.1",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3"
   }
