--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.16.3",
-    "traverse": "^0.6.6"
+    "lodash.template": "^4.4.0"
   },
   "devDependencies": {
     "eslint": "^3.9.1",
