--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "aug": "^2.0.0",
+    "lodash.get": "^4.4.2",
     "lodash.template": "^4.4.0"
   },
   "devDependencies": {
