--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "aug": "^2.0.0",
-    "lodash.get": "^4.4.2",
-    "lodash.template": "^4.4.0"
+    "lodash.get": "^4.4.2"
   },
   "devDependencies": {
     "eslint": "^3.9.1",
